# assimp-rs

./: .gitmodules  .travis.yml  Cargo.toml
examples/: render.rs
src/: internal_macros.rs  lib.rs
src/import/: mod.rs  structs.rs
src/io/: mod.rs
src/log/: mod.rs
src/math/: color3.rs  color4.rs  matrix3.rs  matrix4.rs  quaternion.rs  vector2.rs  vector3.rs
src/scene/: animation.rs  camera.rs  face.rs  light.rs  material.rs  mesh.rs  node.rs  scene.rs  texture.rs
tests/: import.rs  log.rs  math_conversion_tests.rs  scene.rs
