[package]
name = "assimp"
version = "0.3.1"
authors = ["Lee Jeffery <lee@leejeffery.co.uk>"]

description = "Rust bindings for the Assimp library"
repository = "https://github.com/Eljay/assimp-rs"

license = "MIT"
readme = "README.md"

[dependencies]
assimp-sys = "0.3.1"

[dependencies.cgmath]
version = "0.12.0"
optional = true

[dev-dependencies]
glium = "0.15.0"
cgmath = "0.12.0"
