[package]
name = "rust-assimp"
version = "0.1.0"
authors = ["Lee Jeffery <lee@leejeffery.co.uk>", "Jack Fransham"]
edition = "2018"

description = "Rust bindings for the Assimp (Open Asset Import) library, for loading 3D assets"
repository = "https://github.com/Vurich/assimp-rs"

license = "MIT"
readme = "README.md"

[dependencies]
assimp-sys = { path = "./assimp-sys/" }
bitflags = "1.2"

[features]
default = ["cgmath"]

[dependencies.cgmath]
version = "0.17.0"
optional = true

[dev-dependencies]
glium = "0.18.0"
cgmath = "0.17.0"
